@@ -160,7 +160,7 @@ public class Content extends SalesManagerEntity<Long, Content> implements Serial
 	public ContentDescription getDescription() {
 		
 		if(this.getDescriptions()!=null && this.getDescriptions().size()>0) {
-			return this.getDescriptions().get(0);
+			return this.getDescriptions().getFirst();
 		}
 		
 		return null;
