@@ -202,8 +202,8 @@ public class ReadableShoppingCartMapper implements Mapper<ShoppingCart, Readable
 							if (!CollectionUtils.isEmpty(optionDescriptions)
 									&& !CollectionUtils.isEmpty(optionValueDescriptions)) {
 
-								optName = optionDescriptions.get(0).getName();
-								optValue = optionValueDescriptions.get(0).getName();
+								optName = optionDescriptions.getFirst().getName();
+								optValue = optionValueDescriptions.getFirst().getName();
 
 								for (ProductOptionDescription optionDescription : optionDescriptions) {
 									if (optionDescription.getLanguage() != null && optionDescription.getLanguage()
